Installed gulp and gulp-util

--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "url": "?.git"
   },
   "author": "mm",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-util": "^3.0.3"
+  }
 }
