--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Gulp Git Browserify Training",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/msquarednet/workflows.git"
   },
   "author": "mm",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
     "gulp-util": "^3.0.3"
   }
 }
