--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.4.3",
-    "gulp-util": "^3.0.3"
+    "gulp-util": "^3.0.3",
+    "jquery": "^2.1.3",
+    "mustache": "^1.0.0"
   }
 }
