--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
+    "gulp-if": "^1.2.5",
     "gulp-livereload": "^3.8.0",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.3",
     "jquery": "^2.1.3",
     "mustache": "^1.0.0"
