--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^3.8.0",
+    "gulp-minify-html": "^1.0.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.3",
     "jquery": "^2.1.3",
