--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
     "gulp-if": "^1.2.5",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-html": "^1.0.2",
     "gulp-uglify": "^1.2.0",
